--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 /*RESET CSS*/
-*{
+* {
     border: none;
     margin: 0;
     padding: 0;
@@ -14,7 +14,7 @@
     --lem-color: #faf33e;
 }
 
-html{
+html {
     background-color: var(--jet-color);
 }
 
@@ -25,43 +25,51 @@ body {
     padding-top: 80px;
 }
 
-a{
+a {
     color: var(--turq-color);
 }
 
 /* HEADER */
-.header{
+.header {
     box-shadow: 0 3px 4px var(--ruby-color);
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
+    padding: 10px 0;
     position: fixed;
     width: 100%;
     background: var(--jet-color);
     top: 0;
     left: 0;
 }
+
 .header a {
     text-decoration: none;
     color: inherit;
+    padding: 12px;
 }
-.menu-container{
+
+.header .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu-container {
     display: flex;
     align-items: center;
 
 }
-#bttn-cart{
+
+#bttn-cart {
     font-size: 26px;
     background: none;
     color: var(--ruby-color);
     width: 60px;
     height: 60px;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
 }
-.badge{
+
+.badge {
     background: var(--jet-color);
     width: 20px;
     height: 20px;
@@ -75,5 +83,39 @@ a{
     bottom: 5px;
     right: 5px;
     position: absolute;
-    
 }
+
+/* CONTAINER */
+.container {
+    padding-left: 12px;
+    padding-right: 12px;
+}
+@media (min-width: 576px) {
+    .container {
+        width: 540px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+@media (min-width: 768px) {
+    .container {
+        width: 720px;
+    }
+}
+@media (min-width: 992px) {
+    .container {
+        width: 960px
+    }
+}
+@media (min-width: 1200px) {
+    .container {
+        width: 1140px;
+    }
+}
+@media (min-width: 1400px) {
+    .container {
+        width: 1320px;
+    }
+}
+
+/*  */
