--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,6 +29,12 @@ a {
     color: var(--turq-color);
 }
 
+@media(min-width: 992px) {
+    body {
+        padding-top: 120px;
+    }
+}
+
 /* HEADER */
 .header {
     box-shadow: 0 3px 4px var(--ruby-color);
@@ -85,6 +91,7 @@ a {
     right: 5px;
     position: absolute;
 }
+
 @media (min-width: 992px) {
     .header .logo {
         height: 100px;
@@ -97,6 +104,7 @@ a {
     padding-left: 12px;
     padding-right: 12px;
 }
+
 @media (min-width: 576px) {
     .container {
         width: 540px;
@@ -104,25 +112,124 @@ a {
         margin-right: auto;
     }
 }
+
 @media (min-width: 768px) {
     .container {
         width: 720px;
     }
 }
+
 @media (min-width: 992px) {
     .container {
         width: 960px
     }
 }
+
 @media (min-width: 1200px) {
     .container {
         width: 1140px;
     }
 }
+
 @media (min-width: 1400px) {
     .container {
         width: 1320px;
     }
 }
 
-/*  */
+/* TITLES */
+
+h1 {
+    text-align: center;
+    margin: 30px 0 15px;
+    font-weight: 600;
+    font-size: 32px;
+}
+
+h2 {
+    font-size: 22px;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+
+h3 {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+/* CARD */
+.card {
+    box-shadow: 0px 2px 6px var(--ruby-color);
+    border-radius: 5px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+.card img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.card-content {
+    padding: 10px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+
+.card-price {
+    color: var(--turq-color);
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.card-content .btn {
+    margin-top: auto;
+}
+/* BUTTON */
+.btn {
+    text-align: center;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 10px 15px;
+}
+
+.btn-main {
+    background-color: var(--ruby-color);
+    color: var(--mag-color);
+}
+
+.btn-main-outline {
+    color: var(--ruby-color);
+    border: 1px solid var(--ruby-color);
+    background: transparent;
+}
+
+.btn-block {
+    width: 100%;
+}
+
+/* PRODUCTS GRID */
+#products-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 12px;
+}
+
+@media (min-width: 576px) {
+    #products-grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (min-width: 992px) {
+    #products-grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+}
