--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -216,20 +216,20 @@ h3 {
 }
 
 /* PRODUCTS GRID */
-#products-grid {
+.products-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 12px;
 }
 
 @media (min-width: 576px) {
-    #products-grid {
+    .products-grid {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
 @media (min-width: 992px) {
-    #products-grid {
+    .products-grid {
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
 }
