--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -146,14 +146,22 @@ h1 {
     font-size: 32px;
 }
 
-h2, .h2 {
+h2,
+.h2 {
     font-size: 22px;
     font-weight: 500;
     margin-bottom: 8px;
 }
 
-h3 {
+h3,
+.h3 {
     font-size: 18px;
+    font-weight: 500;
+}
+
+h4,
+.h4 {
+    font-size: 5vmin;
     font-weight: 500;
 }
 
@@ -180,7 +188,7 @@ h3 {
 }
 
 
-.card-price {
+.price {
     color: var(--turq-color);
     font-size: 14px;
     font-weight: 500;
@@ -282,8 +290,8 @@ h3 {
 /* CART */
 .cart-sidebar {
     position: fixed;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     width: 100vw;
     height: 100vh;
     background-color: var(--jet-color);
@@ -292,9 +300,10 @@ h3 {
     flex-direction: column;
 
 }
+
 #bttn-close-cart {
     font-size: 30px;
-    color: var(--ruby-color);
+    color: var(--turq-color);
     background-color: transparent;
     padding: 5px;
     align-self: flex-end;
@@ -314,6 +323,52 @@ h3 {
     font-size: 154px;
     margin-bottom: 25px;
 }
+
 #empty-cart .h2 {
     color: var(--turq-color);
+}
+
+#full-cart ul {
+    list-style: none;
+}
+
+.cart-item {
+    display: grid;
+    grid-template-columns: auto 1fr auto auto;
+    gap: 12px;
+    border-bottom: 1px solid var(--turq-color);
+    padding: 12px 0px;
+}
+
+.cart-item img {
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.cart-item button {
+    color: var(--turq-color);
+    font-size: 15px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    align-self: center;
+}
+
+.cart-item input {
+    width: 68px;
+    height: 38px;
+    align-self: center;
+}
+
+/* FORMS */
+.form-input {
+    border: 1px solid var(--turq-color);
+    border-radius: 4px;
+    background-color: var(--jet-color);
+    color: var(--mag-color);
+    font-size: 16px;
+    padding: 9px;
 }
