--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -196,12 +196,12 @@ h4,
     margin-bottom: 10px;
 }
 
-.card-content .btn {
+.card-content .bttn {
     margin-top: auto;
 }
 
 /* BUTTON */
-.btn {
+.bttn {
     text-align: center;
     font-size: 16px;
     font-weight: 600;
@@ -210,18 +210,18 @@ h4,
     padding: 10px 15px;
 }
 
-.btn-main {
+.bttn-main {
     background-color: var(--ruby-color);
     color: var(--mag-color);
 }
 
-.btn-main-outline {
+.bttn-main-outline {
     color: var(--ruby-color);
     border: 1px solid var(--ruby-color);
     background: transparent;
 }
 
-.btn-block {
+.bttn-block {
     width: 100%;
 }
 
@@ -291,13 +291,15 @@ h4,
 .cart-sidebar {
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     width: 100vw;
     height: 100vh;
     background-color: var(--jet-color);
     padding: 15px;
     display: flex;
     flex-direction: column;
+    display: none;
+    /* ALTERAR NO FUTURO */
 
 }
 
@@ -328,8 +330,23 @@ h4,
     color: var(--turq-color);
 }
 
+#full-cart {
+    overflow: auto;
+}
+
 #full-cart ul {
     list-style: none;
+}
+#full-cart .bttn-main-outline {
+    color: var(--turq-color);
+    border: 1px solid var(--turq-color);
+    background: transparent;
+    margin-bottom: 12px;
+}
+
+#full-cart .bttn-main {
+    background-color: var(--turq-color);
+    color: var(--jet-color);
 }
 
 .cart-item {
@@ -362,6 +379,19 @@ h4,
     height: 38px;
     align-self: center;
 }
+.cart-total {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 12px 0;
+}
+.cart-total .h2 {
+    margin: 0;
+}
+.cart-total p:last-child {
+    color: var(--turq-color);
+    font-size: 18px;
+}
 
 /* FORMS */
 .form-input {
@@ -371,4 +401,11 @@ h4,
     color: var(--mag-color);
     font-size: 16px;
     padding: 9px;
+}
+@media (min-width: 768px) {
+    .cart-sidebar {
+        width: 428px;
+        box-shadow: -3px 0 6px rgba(10, 255, 237, .50);
+
+    }
 }
