--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,8 +150,8 @@ h1 {
 
 h2,
 .h2 {
-    font-size: 22px;
-    font-weight: 500;
+    font-size: 24px;
+    font-weight: 600;
     margin-bottom: 8px;
 }
 
@@ -237,6 +237,16 @@ h4,
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 12px;
+    margin-bottom: 16px;
+}
+
+.loading-products {
+    display: block;
+    text-align: center;
+    color: var(--ruby-color);
+    font-size: 30px;
+    margin: 30px 0;
+    --fa-animation-duration: 1.5s;
 }
 
 @media (min-width: 576px) {
@@ -424,4 +434,13 @@ h4,
     color: var(--mag-color);
     font-size: 16px;
     padding: 9px;
+}
+/* ALERTS */
+.alert-error {
+    background-color: var(--lem-color);
+    color: var(--jet-color);
+    font-size:larger;
+    border-radius: 20px;
+    padding: 10px 15px;
+    text-align: center;
 }
