--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -215,6 +215,8 @@ h4,
     cursor: pointer;
     padding: 9px 15px;
     transition: all 0.3s linear;
+    text-decoration: none;
+    display: block;
 }
 
 .bttn-main {
@@ -457,6 +459,41 @@ h4,
     color: var(--mag-color);
     font-size: 16px;
     padding: 9px;
+}
+.form-input::placeholder,
+.form-input:-ms-input-placeholder,
+.form-input::-ms-input-placeholder {
+    color: rgb(133, 133, 133);
+    opacity: 1;
+}
+.form-group {
+    margin-bottom: 12px;
+}
+
+.form-group label {
+    display: block;
+    color: var(--mag-color)
+}
+
+.form-group .form-input {
+    width: 100%;
+    border: 1px solid var(--ruby-color)
+}
+
+#form-checkout {
+    max-width: 424px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 50px;
+}
+#form-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 12px;
+    margin-bottom: 12px;
+}
+#form-row .form-group {
+    margin: 0;
 }
 
 /* ALERTS */
