--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -460,12 +460,14 @@ h4,
     font-size: 16px;
     padding: 9px;
 }
+
 .form-input::placeholder,
 .form-input:-ms-input-placeholder,
 .form-input::-ms-input-placeholder {
     color: rgb(133, 133, 133);
     opacity: 1;
 }
+
 .form-group {
     margin-bottom: 12px;
 }
@@ -486,12 +488,14 @@ h4,
     margin-right: auto;
     margin-bottom: 50px;
 }
+
 #form-row {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 12px;
     margin-bottom: 12px;
 }
+
 #form-row .form-group {
     margin: 0;
 }
@@ -504,4 +508,22 @@ h4,
     border-radius: 20px;
     padding: 10px 15px;
     text-align: center;
+}
+
+/*CHANGE WEBKIT AUTOFILL */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+textarea:-webkit-autofill:active,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus,
+select:-webkit-autofill:active {
+    color: var(--mag-color);
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color:var(--mag-color);
 }
